# hidapi

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  HACKING.rst  LICENSE-bsd.txt  LICENSE.txt  Makefile.am  README.md  README.rst  README.txt  bootstrap  configure.ac  hidapi.pri
.builds/: alpine.yml  archlinux.yml  fedora-mingw.yml  freebsd.yml
bindings/: Hid.cs
cmake/modules/: FindCoreFoundation.cmake  FindIOKit.cmake  FindLIBUSB.cmake
doxygen/: Doxyfile
hidapi/: hid.cpp  hidapi.def  hidapi.h
hidapi/objfre_wxp_x86/i386/: hidapi.lib
hidtest/: .gitignore  Makefile.am  hidtest-vc8.sln  hidtest-vc8.vcproj  hidtest.c  hidtest.cpp  hidtest.sln  hidtest.vcproj
hidtest/Debug/: README.txt
java/: Makefile  README.txt
libusb/: .gitignore  Makefile.am  Makefile.freebsd  Makefile.linux  hid.c
linux/: .gitignore  Makefile  Makefile-manual  Makefile.am  README.txt  build  hid-libusb.c  hid.c
m4/: .gitignore  ax_pthread.m4
mac/: Makefile  Makefile.am  hid.c
pc/: hidapi-hidraw.pc.in  hidapi-libusb.pc.in  hidapi.pc.in
python/: Readme.rst  chid.pxd  hid.pyx  setup-mac.py  setup-windows.py  setup.py  try.py
testgui/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.linux  Makefile.mac  Makefile.mingw  README.txt  copy_to_bundle.sh  hidapigui.cpp  mac_support.cpp  mac_support.h  test.cpp  testgui.pro  testgui.vcproj
testgui/TestGUI.app.in/Contents/MacOS/: testgui
testgui/TestGUI.app/Contents/: Info.plist
testgui/TestGUI.app/Contents/MacOS/: libpng12.0.dylib  libz.1.dylib  testgui
udev/: 99-hid.rules
windows/: .gitignore  Makefile.am  Makefile.mingw  hid.c  hid.cpp  hidapi.sln  hidapi.vcproj  hidapi.vcxproj  hidapi_vs2013.sln  hidapi_vs2013.vcxproj  hidtest-vc8.vcproj  hidtest.sln  hidtest.vcproj  hidtest.vcxproj  hidtest_vs2013.vcxproj  sources
windows/ddk_build/: hidapi.def  sources
windows/objfre_wxp_x86/i386/: hidapi.lib
